--- a/src/test/resources/Properties/Config.properties
+++ b/src/test/resources/Properties/Config.properties
@@ -3,3 +3,7 @@ Browser=Chrome
 ImplicitTime=10
 UserName=arpita_83@mailinator.com
 Password=C0relynx!
+LeadSource=Business Database
+SrchStatus=In Process
+SrchIndustry=Environmental
+SrchLeadType=Person
