--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <artifactId>guice</artifactId>
     <version>4.1.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl -->
+<dependency>
+    <groupId>net.sourceforge.jexcelapi</groupId>
+    <artifactId>jxl</artifactId>
+    <version>2.6</version>
+</dependency>
+
 	
 </dependencies>
  <properties>
