--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,6 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <artifactId>jxl</artifactId>
     <version>2.6</version>
 </dependency>
-
 	
 </dependencies>
  <properties>
@@ -87,17 +86,17 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <build>
 		<plugins>
 			<plugin>
-				 <groupId>org.apache.maven.plugins</groupId>
-   				 <artifactId>maven-surefire-plugin</artifactId>
-   				 <version>3.0.0-M3</version>
+				  	<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.22.1</version>
 				<configuration>
-					 <testFailureIgnore>true</testFailureIgnore>
-					 <useSystemClassLoader>false</useSystemClassLoader>
+					  <testFailureIgnore>true</testFailureIgnore>					  			 
 					 <suiteXmlFiles>
 						<suiteXmlFile>src/test/resources/Runner/testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
+							
 		</plugins>	
 		
 		<testResources>
