--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.1</version>
 				<configuration>
-					  <testFailureIgnore>true</testFailureIgnore>					  			 
+					  <testFailureIgnore>true</testFailureIgnore>
+					  <reuseForks>true</reuseForks>
+					  <useSystemClassLoader>false</useSystemClassLoader>				  			 
 					 <suiteXmlFiles>
 						<suiteXmlFile>src/test/resources/Runner/testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
