--- a/src/test/resources/Properties/OR.properties
+++ b/src/test/resources/Properties/OR.properties
@@ -1,3 +1,4 @@
 #Login Screen
 UserName_ID=username
 LeadCheckbox=//input[@name='list_checkbox[]']
+selectDropdown=//span[contains(text(),'Select')]
