--- a/src/test/resources/Properties/Config.properties
+++ b/src/test/resources/Properties/Config.properties
@@ -1,9 +1,11 @@
-TestsuiteURL=https://staging.convergehub.com/
+TestsuiteURL=https://stage01.convergehub.com/
 Browser=Chrome
 ImplicitTime=10
-UserName=arpita_83@mailinator.com
-Password=C0relynx!
+UserName=coretest@mailinator.com
+Password=123456
 LeadSource=Business Database
 SrchStatus=In Process
 SrchIndustry=Environmental
 SrchLeadType=Person
+Environment=stage01
+Leadid=
