--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <artifactId>mail</artifactId>
     <version>1.4.7</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/avalon-framework/avalon-framework -->
+<dependency>
+    <groupId>avalon-framework</groupId>
+    <artifactId>avalon-framework</artifactId>
+    <version>4.1.3</version>
+</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 <dependency>
@@ -92,15 +98,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 				<configuration>
 					   <testFailureIgnore>true</testFailureIgnore>
 					   <useSystemClassLoader>false</useSystemClassLoader>	
-					   				  				  		  			 
+					  <forkCount>0</forkCount>				   				  				  		  			 
 					 <suiteXmlFiles>
 						<suiteXmlFile>src/test/resources/Runner/testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
-			</plugin>
-							
-		</plugins>	
-		
+			</plugin>	
+ 		</plugins>		
 		<testResources>
 	      <testResource>
 	        <directory>src/test/resources</directory>
