--- a/src/test/resources/Properties/SavedVal.properties
+++ b/src/test/resources/Properties/SavedVal.properties
@@ -1,5 +1,7 @@
 #Saved
-#Thu Feb 14 12:25:55 IST 2019
-Product_ID=90ce546a-2b1a-3c54-f986-5c6511afe117
-Invoice_ID=2e4fe521-9292-4840-7794-5c6511e45279
-Quote_ID=b315dd04-9647-4c2f-166d-5c65117ba2eb
+#Fri Feb 15 18:23:10 IST 2019
+Product_ID=2124c54d-106a-a14c-56e2-5c66b6a5078b
+Payment_ID=5b9345da-eea9-4eb9-a1e4-5c66b6d43052
+Invoice_ID=c8a8429b-76f0-22c9-5fbb-5c66b6a41afb
+Invoice_No=
+Quote_ID=ec2dd28e-f91f-3a55-ff47-5c66b6d88a6f
